v2.0 MVC design & control by TCP